part4/4_1/manifests/mainapp-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: main-application
  labels: 
    name: main-application
