part4/4_1/manifests/deployment-pingpong.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: main-application
  name: pingpong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
        - name: main-app
          image: niklasku/dev_kub_pingpong:4_1_3
          volumeMounts:
          - name: foo
            mountPath: /app/mainapp/.env
            subPath: .env
            readOnly: true
          resources:
            limits:
              cpu: "150m"
              memory: "100Mi"
          readinessProbe:
            initialDelaySeconds: 10 # Initial delay until the readiness is tested
            periodSeconds: 5 # How often to test
            httpGet:
               path: /healthz
               port: 3001
      volumes:
        - name: foo
          configMap:
            name: main-app-configmap
