part4/4_1/manifests/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: main-application
  name: postgres
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    name: postgres
  selector:
    app: postgres
